sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(tab:Array)  {
                   ^AlgBubbleSort1:2: error: class Array takes type parameters
def bubbleSort(tab:Array)  {
                   ^AlgBubbleSort1:3: error: not found: value long
  long = tab.length
  ^AlgBubbleSort1:4: error: not found: value long
  for(i<- 0 to long-1)
               ^