sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(tab:Array)  {
  long = tab.length
  for(i<- 0 to long-1)
  {
    while(tab(i) < tab(i+1))
    	echange(tab(i), tab(j))
  }
}